[gd_scene load_steps=37 format=3 uid="uid://dds7yrrx56gcy"]

[ext_resource type="Script" path="res://lessons_reference/02_extended/player/godot_armor.gd" id="1"]
[ext_resource type="Script" path="res://lessons_reference/02_extended/player/player.gd" id="2"]
[ext_resource type="Resource" uid="uid://b8dl3xpuhku3k" path="res://lessons_reference/02_extended/items/basic_fire.tres" id="2_my8vd"]
[ext_resource type="Texture2D" uid="uid://bw03btxpkxde4" path="res://player/godot_bottom.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dekkcmj408pvt" path="res://player/hand_fire.png" id="5"]
[ext_resource type="PackedScene" path="res://common/shadow.tscn" id="6"]
[ext_resource type="Script" path="res://lessons_reference/02_extended/player/weapon_pivot.gd" id="7"]
[ext_resource type="AudioStream" uid="uid://c6bk7awsqnbt8" path="res://player/pain_01.wav" id="7_akaxy"]
[ext_resource type="AudioStream" uid="uid://ursqvcxb3uov" path="res://player/death_01.wav" id="8_gm2wu"]
[ext_resource type="AudioStream" uid="uid://deol7mqpv4xhy" path="res://player/pain_02.wav" id="8_uasnf"]
[ext_resource type="AudioStream" uid="uid://bv2sasgvsrp4i" path="res://player/pain_03.wav" id="9_o5hgn"]
[ext_resource type="AudioStream" uid="uid://b3w6lv1kglxf6" path="res://player/death_02.wav" id="9_t1j8l"]
[ext_resource type="AudioStream" uid="uid://17y53e55al8d" path="res://player/pain_04.wav" id="10_vboft"]
[ext_resource type="AudioStream" uid="uid://dgdkinlpjq4ob" path="res://player/pain_05.wav" id="11_sy526"]
[ext_resource type="AudioStream" uid="uid://c56hqbbb5ktp1" path="res://player/death_03.wav" id="14_q1blf"]
[ext_resource type="Texture2D" uid="uid://206pnoc2labm" path="res://ui/bars/health_point.png" id="15_qr1q8"]
[ext_resource type="Texture2D" uid="uid://c33mf20ohybyi" path="res://common/particles/white_circle.png" id="17_1omj8"]
[ext_resource type="Texture2D" uid="uid://bx2vl1vtg6633" path="res://pickups/pickup_fire.png" id="17_kjrxn"]
[ext_resource type="FontFile" uid="uid://cmi6sg55wgddn" path="res://common/Montserrat-ExtraBold.ttf" id="18_yti6i"]
[ext_resource type="Texture2D" uid="uid://biluxu10n4ttm" path="res://pickups/pickup_gem.png" id="19_w2pwe"]

[sub_resource type="CircleShape2D" id="1"]
radius = 19.0754

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_28x1b"]
random_pitch = 1.03
streams_count = 5
stream_0/stream = ExtResource("7_akaxy")
stream_1/stream = ExtResource("8_uasnf")
stream_2/stream = ExtResource("9_o5hgn")
stream_3/stream = ExtResource("10_vboft")
stream_4/stream = ExtResource("11_sy526")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4jtnk"]
random_pitch = 1.03
streams_count = 3
stream_0/stream = ExtResource("8_gm2wu")
stream_1/stream = ExtResource("9_t1j8l")
stream_2/stream = ExtResource("14_q1blf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1l3ip"]
bg_color = Color(0.107246, 0.142187, 0.137933, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 4.0
expand_margin_top = 4.0
expand_margin_right = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tyuhx"]
texture = ExtResource("15_qr1q8")
texture_margin_left = 4.0
texture_margin_top = 16.2304
texture_margin_right = 4.0
texture_margin_bottom = 8.18285

[sub_resource type="Curve" id="Curve_a1o1w"]
_data = [Vector2(0.06469, 0.013483), 0.0, 0.0, 0, 0, Vector2(0.207547, 1), 0.0, 0.0, 0, 0, Vector2(0.622642, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_157x8"]
curve = SubResource("Curve_a1o1w")

[sub_resource type="Curve" id="Curve_7ttaq"]
_data = [Vector2(0, 0.617977), 0.0, 2.05975, 0, 0, Vector2(0.280323, 0.964045), -0.00793995, -0.00793995, 0, 0, Vector2(0.994609, 0.283146), -2.65, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_1ikpe"]
curve = SubResource("Curve_7ttaq")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xw27s"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 5.0
spread = 23.865
initial_velocity_min = 123.65
initial_velocity_max = 156.18
gravity = Vector3(0, -10, 0)
scale_min = 0.45
scale_max = 0.55
scale_curve = SubResource("CurveTexture_1ikpe")
alpha_curve = SubResource("CurveTexture_157x8")

[sub_resource type="LabelSettings" id="LabelSettings_ndhff"]
font = ExtResource("18_yti6i")
font_size = 28
outline_size = 4
outline_color = Color(0, 0, 0, 0.564706)

[sub_resource type="Animation" id="Animation_2suv7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GodotArmor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/HBoxContainer2:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthBar:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GodotArmor:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.474655, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GodotArmor:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("GodotArmor:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WeaponHolder:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -36)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WeaponHolder:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("WeaponHolder/WeaponAnchor/HandLeft:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.39682, -25.0513)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("WeaponHolder/WeaponAnchor/HandRight:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.560448, 25.8126)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("WeaponHolder/WeaponAnchor/HandRight:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("WeaponHolder/WeaponAnchor/HandLeft:rotation")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath(".:visible")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yo07r"]
resource_name = "damage"
length = 0.26667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GodotArmor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(0.406126, 1),
"update": 0,
"values": [Color(1, 0, 0.0173602, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_he53h"]
resource_name = "die"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/HBoxContainer2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.633333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HealthBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GodotArmor:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.466667, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-0.474655, 0), Vector2(-0.474655, -88), Vector2(-0.474655, -95), Vector2(-0.474655, 27)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GodotArmor:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.66383, -1.54495]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("GodotArmor:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("WeaponHolder:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -36)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WeaponHolder:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WeaponHolder/WeaponAnchor/HandLeft:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.4, 0.5, 0.633333, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-9, 44), Vector2(-8, 21), Vector2(-19, -7), Vector2(-30, -110), Vector2(-18, -96), Vector2(-12, -2), Vector2(-4, 57)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("WeaponHolder/WeaponAnchor/HandRight:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.4, 0.5, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-121, 43), Vector2(-123, 24), Vector2(-109, 5), Vector2(-129, -35), Vector2(-146, -42), Vector2(-168, 14), Vector2(-172.5, 37), Vector2(-177, 60)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("WeaponHolder/WeaponAnchor/HandRight:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4, 0.5, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [2.40031, 1.89716, 3.09326, 3.51053, 3.55793, 3.92421, 3.22679]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("WeaponHolder/WeaponAnchor/HandLeft:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.4, 0.5, 0.633333, 0.666667, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.831851, 1.15846, -1.02339, -0.947309, -0.837662, -0.889525, -0.0923934]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath(".:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 0.833333, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("GodotArmor:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e1ua2"]
resource_name = "heal"
length = 0.500003
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GodotArmor:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.732043, 1),
"update": 0,
"values": [Color(0.215028, 1, 0.438708, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jnmgn"]
_data = {
"RESET": SubResource("Animation_2suv7"),
"damage": SubResource("Animation_yo07r"),
"die": SubResource("Animation_he53h"),
"heal": SubResource("Animation_e1ua2")
}

[node name="Player" type="CharacterBody2D"]
collision_mask = 66
motion_mode = 1
script = ExtResource("2")
initial_weapon = ExtResource("2_my8vd")

[node name="GodotArmor" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-0.474655, 0)
texture = ExtResource("3")
offset = Vector2(0.474655, -40.5866)
script = ExtResource("1")

[node name="WeaponHolder" type="Node2D" parent="."]
unique_name_in_owner = true
z_index = 1
position = Vector2(0, -36)
script = ExtResource("7")

[node name="WeaponAnchor" type="Marker2D" parent="WeaponHolder"]
position = Vector2(66, 0)

[node name="HandLeft" type="Sprite2D" parent="WeaponHolder/WeaponAnchor"]
position = Vector2(2.39682, -25.0513)
texture = ExtResource("5")

[node name="HandRight" type="Sprite2D" parent="WeaponHolder/WeaponAnchor"]
position = Vector2(0.560448, 25.8126)
texture = ExtResource("5")
flip_v = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="WeaponHolder"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
z_index = 2
shape = SubResource("1")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -40.5866)

[node name="Shadow" parent="." instance=ExtResource("6")]
position = Vector2(0, 34.4444)

[node name="DamageAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_28x1b")

[node name="DieAudio" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_4jtnk")

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
z_index = 5
offset_left = -69.0
offset_top = -141.0
offset_right = 68.0
offset_bottom = -116.587
theme_override_styles/background = SubResource("StyleBoxFlat_1l3ip")
theme_override_styles/fill = SubResource("StyleBoxTexture_tyuhx")
value = 69.6
show_percentage = false

[node name="Dust" type="GPUParticles2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 27)
emitting = false
amount = 5
process_material = SubResource("ParticleProcessMaterial_xw27s")
texture = ExtResource("17_1omj8")
lifetime = 0.5

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = -68.0
offset_right = 164.0
offset_bottom = -32.0
grow_vertical = 0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8

[node name="WeaponTextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("17_kjrxn")
expand_mode = 1
stretch_mode = 5

[node name="WeaponLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Weapon name"
label_settings = SubResource("LabelSettings_ndhff")
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -177.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = 82.0
grow_horizontal = 0
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 8
alignment = 2

[node name="GemTextureRect" type="TextureRect" parent="CanvasLayer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("19_w2pwe")
expand_mode = 1
stretch_mode = 5

[node name="GemLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "00"
label_settings = SubResource("LabelSettings_ndhff")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_jnmgn")
}
